--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,13 +2,14 @@
 
 # This is supervisor itself. The settings here ensure that the stdout of the application supervisor starts are printed in the stdout. Meaning that docker logs will see thous printouts.
 [supervisord]
+user=root
 nodaemon=true
 logfile=/dev/null
 pidfile=/var/run/supervisord.pid
 
 # This is the main application. (notice that it starts the startup script and not the application directly.)
-[program:service-a]
-command=/scripts/startup-script.sh
+[program:main-app]
+command=python /scripts/startup-script.py
 directory=/scripts
 autostart=true
 autorestart=true
